[package]
name = "sigrok"
version = "0.2.0"
authors = ["Tim Ryan <id@timryan.org>"]
description = "High-levelbBindings for libsigrok"
license = "GPL-3.0"
repository = "https://github.com/tcr/rust-sigrok.git"
homepage = "https://github.com/tcr/rust-sigrok.git"

[dependencies]
sigrok-sys = "0.2.0"
glib-sys = "0.3.0"
