[package]
name = "sigrok"
edition = "2018"
authors = ["lights0123 <developer@lights0123.com>", "Tim Ryan <id@timryan.org>"]
version = "0.4.0"
repository = "https://github.com/tcr/rust-sigrok"
readme = "README.md"
description = "High-level bindings for libsigrok"
license = "GPL-3.0"

[dependencies]
sigrok-sys = { path = "../sigrok-sys" }
glib-sys = "0.9.1"
glib = "0.9.3"
thiserror = "1.0.19"
displaydoc = "0.1.6"
num-rational = "0.2.4"
bitflags = "1.2.1"
futures = "0.3.5"